Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18134

Emulator deployment is incorrect for deployment items that explicitly specify "!:" as drive

XMLWordPrintable

    • 1163032eda2dce89bd464d2a99f3cbbcf20cc232

      The following deployment statement in .pro file generates invalid emulator deployment statement in bld.inf:

      mydep.sources =  foobar.txt
      mydep.path = !:/data
      DEPLOYMENT += mydep
      

      Generated emulator deployment target:

      OPTION DEPLOY_TARGET c:/s60/devices/git_symbian3/epoc32/winscw/!/data/foobar.txt
      

      The "!" drive in DEPLOY_TARGET should be converted to "c".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes