Fix emulator deployment for items with "!:" drive.

"!:" drive is used to indicate need to prompt user to specify
installation drive, which is obviously not happening when we do the
build time emulator deployment, so default it to "c:" drive.

Task-number: QTBUG-18134
Reviewed-by: Janne Koskinen